training/service/clusterip.yaml
apiVersion: v1
kind: Service
metadata:
  name: web-cluster-ip
  namespace: workload-a
spec:
  selector: 
    app: web-clusterip
  ports:
  - protocol: TCP
    port: 80
    targetPort: 80
