training/service/endpoints.yaml
apiVersion: v1
kind: Endpoints
metadata:
  name: dbdev
subsets:
  - addresses:
      - ip: 192.0.2.42
    ports:
      - port: 1234
