training/service/service-external.yaml
apiVersion: v1
kind: Service
metadata:
  name: my-service
spec:
  type: ExternalName
  externalName: tamtel-restapi.herokuapp.com
