training/service/service-without-selector.yaml
apiVersion: v1
kind: Service
metadata:
  name: dbdev
spec:
  ports:
  - protocol: TCP
    port: 80
    targetPort: 1234
